--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.91.4",
+    "@types/bn.js": "^5.1.5",
     "@types/numeral": "^2.0.5",
+    "assert": "^2.1.0",
     "bn.js": "^5.2.1",
     "borsh": "^2.0.0",
     "numeral": "^2.0.6",
