--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@solana/web3.js": "^1.91.4",
     "@types/bn.js": "^5.1.5",
     "@types/numeral": "^2.0.5",
+    "@types/w3c-web-usb": "^1.0.10",
     "assert": "^2.1.0",
     "bn.js": "^5.2.1",
     "borsh": "^2.0.0",
